Fix Dashboard card to responsive and overflow.

--- a/style/style.css
+++ b/style/style.css
@@ -170,7 +170,10 @@
                     & > .dashboard-content{
                         display: flex;
                         gap: 2rem;
+                        overflow-x: auto;
+                        border-radius: 20px;
                         & > div{
+                            min-width: 300px;
                             flex: 1;
                             height: 13rem;
                             padding: 1rem 0;
